--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,6 +17,18 @@ body{
 h1, h2, h3 {
     font-family: 'Roboto Slab', serif;
 }
+h1 {
+    font-size: 2.2rem;
+    margin-bottom: 2rem;
+}
+h2 {
+    font-size: 1.8rem;
+}
+
+h3 {
+    font: 1.5rem;
+    margin: 0px;
+}
 
 .wrapper {
   box-sizing: border-box;
@@ -39,15 +51,15 @@ nav {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-
 }
 
-nav ul {
+nav ul,.contact ul {
     display: flex;
     justify-content: space-around;
     list-style: none;
     padding-left: 0px;
     flex-wrap: wrap;
+    
 }
 
 nav li {
@@ -56,7 +68,6 @@ nav li {
 
 nav a {
     display: flex;
-    
     align-items: center;
     text-decoration: none;
     color: var(--rich-black-fogra-39);
@@ -84,7 +95,7 @@ nav a {
 
 .hero-text {
     text-align: center;
-    font-size: 1.5rem;
+
 }
 .hero-bck {
     background-image:url('../images/old-books.jpg');
@@ -106,6 +117,32 @@ main{
     color:var(--rich-black-fogra-39);
     padding: 50px 40px;
     font-size: 1.1rem;
+    
+}
+
+.contact {
+  background-color: var(--medium-turquoise);
+   padding: 20px;
+}
+
+.contact h2{
+    margin-top: 0px;
+    text-align: center;
+    font-size: 1.8rem;
+}
+
+.contact ul {
+    justify-content: space-evenly;
+    width: 50%;
+    margin: auto;
+    align-items: center;
+}
+
+.contact-twitter{
+    height: 50px;
+}
+.contact-email {
+     height: 36.4px;
 }
 
 footer {
@@ -127,6 +164,18 @@ footer {
     }
     .about{
         font-size: 1.5rem;
-        padding: 80px 40px;
+        padding: 1.5em auto;
+    }
+    .about p {
+        width:80%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+   
+    .contact-twitter{
+        height: 80px;
+    }
+    .contact-email {
+        height: 50px;
     }
 }
