--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,15 +18,15 @@ h1, h2, h3 {
     font-family: 'Roboto Slab', serif;
 }
 h1 {
-    font-size: 2.2rem;
+    font-size: 2.3rem;
     margin-bottom: 2rem;
 }
 h2 {
-    font-size: 1.8rem;
+    font-size: 1.9rem;
 }
 
 h3 {
-    font: 1.5rem;
+    font: 1.7rem;
     margin: 0px;
 }
 
@@ -163,7 +163,7 @@ footer {
         font-size: 1.4rem;
     }
     .about{
-        font-size: 1.5rem;
+        font-size: 1.3rem;
         padding: 1.5em auto;
     }
     .about p {
@@ -178,4 +178,39 @@ footer {
     .contact-email {
         height: 50px;
     }
+}
+
+
+.cards {
+ display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+
+.card {
+  padding: 1rem;
+  display: flex;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  position: relative;
+  background-color: red;
+  margin: 1rem;
+} 
+
+.card-content {
+    padding-left: 0.75rem;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+}
+
+.cover-book{
+    height: 200px;
 }
