--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,15 +18,15 @@ h1, h2, h3 {
     font-family: 'Roboto Slab', serif;
 }
 h1 {
-    font-size: 2.3rem;
-    margin-bottom: 2rem;
+    font-size: 2.3em;
+    margin-bottom: 2em;
 }
 h2 {
-    font-size: 1.9rem;
+    font-size: 1.9em;
 }
 
 h3 {
-    font: 1.7rem;
+    font-size: 1.7em;
     margin: 0px;
 }
 
@@ -73,11 +73,12 @@ nav a {
     color: var(--rich-black-fogra-39);
 }
 
-.about a {
+a {
     color: var(--shiny-shamrock-var);
+    text-decoration: none;
 }
-.about a:hover {
-        text-decoration: none;
+a:hover {
+    text-decoration: underline;
 }
 
 .logo {
@@ -115,9 +116,42 @@ main{
 .about {
     background-color: var(--powder-blue);
     color:var(--rich-black-fogra-39);
-    padding: 50px 40px;
-    font-size: 1.1rem;
-    
+    padding: 0 40px 50px 40px;
+    font-size: 1.1em;
+}
+
+.more-info{
+display: flex;
+flex-direction: column;
+}
+
+.more-info button{
+    box-shadow:inset 0px 1px 0px 0px var(--shiny-shamrock);
+	background:linear-gradient(to bottom, var(--shiny-shamrock-var) 5%, var(--rich-black-fogra-39) 100%);
+	border-radius:6px;
+	border:2px solid var(--shiny-shamrock);
+	display:inline-block;
+	cursor:pointer;
+	font-size:1.3em;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px var(--shiny-shamrock-var);
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.more-info button:hover {
+    background:linear-gradient(to bottom, var(--rich-black-fogra-39) 5%, var(--shiny-shamrock-var) 100%);
+}
+.more-info button:active {
+    position:relative;
+	top:1px;
+}
+.more-info a{
+    color:#ffffff;
+}
+.more-info a:hover{
+    text-decoration: none;
 }
 
 .contact {
@@ -128,7 +162,7 @@ main{
 .contact h2{
     margin-top: 0px;
     text-align: center;
-    font-size: 1.8rem;
+    font-size: 1.8em;
 }
 
 .contact ul {
@@ -145,6 +179,16 @@ main{
      height: 36.4px;
 }
 
+.section-title {
+    text-align: center;
+    font-size: 2.5em;
+    display: block;
+    margin: 0 auto;
+    padding-top: 0.7em;
+    padding-bottom: 0.7em;
+    text-transform: uppercase;
+}
+
 footer {
     text-align: center;
     background-color: var(--shiny-shamrock);
@@ -153,17 +197,22 @@ footer {
     grid-area: footer;
 }
 
-
+@media (min-width: 550px){
+    .more-info{
+        flex-direction: row;
+        justify-content: space-around;
+    }
+}
 
 @media (min-width: 1400px){
     .hero {
         height: 50vh;
     }
     nav{
-        font-size: 1.4rem;
+        font-size: 1.4em;
     }
     .about{
-        font-size: 1.3rem;
+
         padding: 1.5em auto;
     }
     .about p {
@@ -171,7 +220,7 @@ footer {
         margin-left: auto;
         margin-right: auto;
     }
-   
+
     .contact-twitter{
         height: 80px;
     }
@@ -180,9 +229,14 @@ footer {
     }
 }
 
+/*Fiction*/
+.fiction{
+  background-color: var(--powder-blue);
+}
+
 
 .cards {
- display: flex;
+  display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
@@ -195,8 +249,11 @@ footer {
   -ms-flex-direction: row;
   flex-direction: row;
   position: relative;
-  background-color: red;
+  background-color: var(--powder-blue);
   margin: 1rem;
+  border: 4px double var(--rich-black-fogra-39);
+  align-items: center;
+  width: 100%;
 } 
 
 .card-content {
@@ -213,4 +270,73 @@ footer {
 
 .cover-book{
     height: 200px;
+}
+
+.card-content>ul{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: start;
+    margin: 0;
+    margin-bottom: 0.5rem;
+    padding-left: 0px;
+}
+
+.card-content>ul>li{
+    list-style: none;
+    background-size: 16px;
+    background-repeat: no-repeat;
+	background-position: left center;
+    padding-left: 20px;
+    margin: 0 1rem;
+}
+
+.syfy {
+	background-image: url('/images/rocket-launch.png');
+}
+
+.fantasy {
+	background-image: url('/images/sewing-thread.png');
+}
+
+.time-travel{
+	background-image: url('/images/clockwise-back.png');
+
+}
+
+.card-content>h3{
+    margin-bottom: 1rem;
+}
+.card-content>p{
+    margin-top: 0px;
+}
+
+
+/*Non fiction*/
+
+.non-fiction{
+    background-color: var(--powder-blue);
+}
+
+.non-fiction h4 {
+    font-size: 1.3em;
+}
+.cards-grid {
+    max-width: 1500px;
+    padding: 1rem 2rem;
+    margin: 0 auto;
+    display: grid;
+    grid-gap: 1rem;
+    font-size: 1.1em;
+    
+}
+.card-grid {
+  padding: 1rem;
+  border: 4px double var(--rich-black-fogra-39);
+  background-color: var(--powder-blue);
+}
+
+
+
+@media (min-width: 750px) {
+  .cards-grid { grid-template-columns: repeat(2, 1fr); }
 }
