--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,16 @@
 :root {/* CSS HEX */
 --rich-black-fogra-39: #000501ff;
 --shiny-shamrock: #73ab84ff;
---shiny-shamrock-var: rgb(113, 139, 121);
+--shiny-shamrock-var: #344E41ff;
 --medium-turquoise: #79c7c5ff;
 --powder-blue: #ade1e5ff;
+
+/* Second version*/
+    --timberwolf: #dad7cdff;
+    --laurel-green: #a3b18aff;
+    --fern-green: #588157ff;
+    --hunter-green: #3a5a40ff;
+    --brunswick-green: #344e41ff;
 }
 
 
@@ -74,7 +81,7 @@ nav a {
 }
 
 a {
-    color: var(--shiny-shamrock-var);
+    color: var(--hunter-green);
     text-decoration: none;
 }
 a:hover {
@@ -120,14 +127,23 @@ main{
     font-size: 1.1em;
 }
 
+
+.profile-photo{
+    height: 150px;
+    float: left;
+    margin-right: 1rem;
+    margin-bottom: 0.2rem;
+    margin-top: 1.3rem;
+}
+
 .more-info{
-display: flex;
-flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 .more-info button{
     box-shadow:inset 0px 1px 0px 0px var(--shiny-shamrock);
-	background:linear-gradient(to bottom, var(--shiny-shamrock-var) 5%, var(--rich-black-fogra-39) 100%);
+	background:linear-gradient(to bottom, var(--fern-green) 5%, var(--brunswick-green) 100%);
 	border-radius:6px;
 	border:2px solid var(--shiny-shamrock);
 	display:inline-block;
@@ -136,12 +152,11 @@ flex-direction: column;
 	font-weight:bold;
 	padding:6px 24px;
 	text-decoration:none;
-	text-shadow:0px 1px 0px var(--shiny-shamrock-var);
-    margin-top: 30px;
-    margin-bottom: 30px;
+	text-shadow:0px 1px 0px var(--fern-green);
+    margin:1rem;
 }
 .more-info button:hover {
-    background:linear-gradient(to bottom, var(--rich-black-fogra-39) 5%, var(--shiny-shamrock-var) 100%);
+    background:linear-gradient(to bottom, var(--brunswick-green) 5%, var(--fern-green) 100%);
 }
 .more-info button:active {
     position:relative;
@@ -192,42 +207,11 @@ flex-direction: column;
 footer {
     text-align: center;
     background-color: var(--shiny-shamrock);
-    color: var(--powder-blue);
+    color: var(--rich-black-fogra-39);
     padding: 15px;
     grid-area: footer;
 }
 
-@media (min-width: 550px){
-    .more-info{
-        flex-direction: row;
-        justify-content: space-around;
-    }
-}
-
-@media (min-width: 1400px){
-    .hero {
-        height: 50vh;
-    }
-    nav{
-        font-size: 1.4em;
-    }
-    .about{
-
-        padding: 1.5em auto;
-    }
-    .about p {
-        width:80%;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    .contact-twitter{
-        height: 80px;
-    }
-    .contact-email {
-        height: 50px;
-    }
-}
 
 /*Fiction*/
 .fiction{
@@ -245,14 +229,10 @@ footer {
 
 .card {
   padding: 1rem;
-  display: flex;
-  -ms-flex-direction: row;
-  flex-direction: row;
   position: relative;
   background-color: var(--powder-blue);
   margin: 1rem;
   border: 4px double var(--rich-black-fogra-39);
-  align-items: center;
   width: 100%;
 } 
 
@@ -270,12 +250,14 @@ footer {
 
 .cover-book{
     height: 200px;
+    display: block;
+    margin: 0 auto;
 }
 
 .card-content>ul{
     display: flex;
     flex-wrap: wrap;
-    justify-content: start;
+    justify-content: center;
     margin: 0;
     margin-bottom: 0.5rem;
     padding-left: 0px;
@@ -305,6 +287,7 @@ footer {
 
 .card-content>h3{
     margin-bottom: 1rem;
+    text-align: center;
 }
 .card-content>p{
     margin-top: 0px;
@@ -336,7 +319,65 @@ footer {
 }
 
 
+@media (min-width: 550px) {
+    .more-info {
+        flex-direction: row;
+        justify-content: space-around;
+    }
+    .card {
+        display: flex;
+        -ms-flex-direction: row;
+        flex-direction: row;
+        position: relative;
+        align-items: center;
+    }
+    .card-content>ul {
+        justify-content: start;
+        margin: 0;
+        margin-bottom: 0.5rem;
+        padding-left: 0px;
+    }
+    .card-content>h3 {
+        text-align: left;
+    }
+    .profile-photo{
+        height: 250px;
+    }
+}
 
 @media (min-width: 750px) {
-  .cards-grid { grid-template-columns: repeat(2, 1fr); }
+    .cards-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
+
+@media (min-width: 1400px) {
+    .hero {
+        height: 50vh;
+    }
+
+    nav {
+        font-size: 1.4em;
+    }
+
+    .about {
+
+        padding: 1.5em auto;
+    }
+
+    .about p {
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .contact-twitter {
+        height: 80px;
+    }
+
+    .contact-email {
+        height: 50px;
+    }
+}
+
+
