--- a/styles/styles.css
+++ b/styles/styles.css
@@ -273,15 +273,15 @@ footer {
 }
 
 .syfy {
-	background-image: url('/images/rocket-launch.png');
+	background-image: url('./images/rocket-launch.png');
 }
 
 .fantasy {
-	background-image: url('/images/sewing-thread.png');
+	background-image: url('./images/sewing-thread.png');
 }
 
 .time-travel{
-	background-image: url('/images/clockwise-back.png');
+	background-image: url('./images/clockwise-back.png');
 
 }
 
