--- a/styles/styles.css
+++ b/styles/styles.css
@@ -273,7 +273,7 @@ footer {
 }
 
 .syfy {
-	background-image: url('./images/rocket-launch.png');
+	background-image: url('https://raw.githubusercontent.com/Darkor-LF/contact/main/images/rocket-launch.png');
 }
 
 .fantasy {
