--- a/styles/styles.css
+++ b/styles/styles.css
@@ -277,11 +277,11 @@ footer {
 }
 
 .fantasy {
-	background-image: url('./images/sewing-thread.png');
+	background-image: url('https://raw.githubusercontent.com/Darkor-LF/contact/main/images/sewing-thread.png');
 }
 
 .time-travel{
-	background-image: url('./images/clockwise-back.png');
+	background-image: url('https://raw.githubusercontent.com/Darkor-LF/contact/main/images/clockwise-back.png');
 
 }
 
