--- a/styles/styles.css
+++ b/styles/styles.css
@@ -360,6 +360,9 @@ footer {
         padding: 1.5em auto;
     }
 
+    .profile-photo {
+         margin-left: 10%;
+    }
     .about p {
         width: 80%;
         margin-left: auto;
