--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,7 +33,7 @@ h3 {
 }
 
 .wrapper {
-  box-sizing: border-box;
+    box-sizing: border-box;
     height: 100vh;
     display: grid;
     grid-template-rows: auto 1fr auto;
@@ -57,7 +57,7 @@ nav {
 
 nav ul,.contact ul {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     list-style: none;
     padding-left: 0px;
     flex-wrap: wrap;
@@ -124,11 +124,10 @@ main{
 
 
 .profile-photo{
-    height: 150px;
-    float: left;
-    margin-right: 1rem;
-    margin-bottom: 0.2rem;
-    margin-top: 1.3rem;
+    height: 175px;
+    float: none;
+    display: block;
+    margin: 0 auto;
 }
 
 .more-info{
@@ -277,7 +276,6 @@ footer {
 
 .time-travel{
 	background-image: url('../images/clockwise-back.png');
-
 }
 
 .card-content>h3{
@@ -300,7 +298,7 @@ footer {
 }
 .cards-grid {
     max-width: 1500px;
-    padding: 1rem 2rem;
+    padding: 1rem;
     margin: 0 auto;
     display: grid;
     grid-gap: 1rem;
@@ -315,10 +313,18 @@ footer {
 
 
 @media (min-width: 550px) {
+    .profile-photo{
+        height: 250px;
+        float: left;
+        margin-right: 1rem;
+        margin-bottom: 0.2rem;
+        margin-top: 1.3rem;
+    }
     .more-info {
         flex-direction: row;
         justify-content: space-around;
     }
+
     .card {
         display: flex;
         -ms-flex-direction: row;
@@ -334,9 +340,6 @@ footer {
     }
     .card-content>h3 {
         text-align: left;
-    }
-    .profile-photo{
-        height: 250px;
     }
 }
 
@@ -361,7 +364,7 @@ footer {
     }
 
     .profile-photo {
-         margin-left: 10%;
+        margin-left: 10%;
     }
     .about p {
         width: 80%;
@@ -376,6 +379,7 @@ footer {
     .contact-email {
         height: 50px;
     }
+
 }
 
 
