--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,11 +6,18 @@
 --fern-green: #588157ff;
 --hunter-green: #3a5a40ff;
 --brunswick-green: #344e41ff;
+/*New palette*/
+--light-one:#F1FFFA;
+--light-two:#CCFCCB;
+--dark-one:#464E47;
+--dark-two:#568259;
+--middle: #96E6B3;
+--link:#0077b6;
 }
 
 
 body{
-    color: var(--rich-black-fogra-39);
+    color: var(--dark-one);
     font-family: 'Exo', sans-serif;
     padding: 0;
     margin: 0;
@@ -45,23 +52,48 @@ h3 {
 
 header {
     grid-area: header;
+    background-color: var(--dark-two);
 }
 
-nav {
-    background-color: var(--medium-turquoise);
-    padding: 20px;
+.upper-menu{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-height: 75px;
+    padding-top: 20px;
+    padding-right: 30px;
+    border-bottom: 3px solid var(--middle);
+}
+
+.navigation, .nav-links {
+   
     display: flex;
     flex-wrap: wrap;
+}
+
+.home{
+    color: var(--light-one);
+    text-decoration: none;
+    font-size: 2rem;
+    margin-left: 30px;
+}
+
+.home:hover{
+    color: var(--light-two);
+    text-decoration: none;
+}
+
+.nav-links{
+    padding: 20px;
     justify-content: space-around;
 }
 
-nav ul,.contact ul {
+.navigation ul, .nav-links ul,.contact ul {
     display: flex;
     justify-content: space-evenly;
     list-style: none;
     padding-left: 0px;
     flex-wrap: wrap;
-    
 }
 
 nav li {
@@ -72,11 +104,11 @@ nav a {
     display: flex;
     align-items: center;
     text-decoration: none;
-    color: var(--rich-black-fogra-39);
+    color: var(--light-two);
 }
 
 a {
-    color: var(--hunter-green);
+    color: var(--link);
     text-decoration: none;
 }
 a:hover {
@@ -88,36 +120,13 @@ a:hover {
     padding-right: 5px;
 }
 
-.hero {
-    position: relative;
-    width:100%;
-    display: grid;
-    justify-content: center;
-    align-items: center;
-}
-
-.hero-text {
-    text-align: center;
-
-}
-.hero-bck {
-    background-image:url('../images/old-books.jpg');
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    z-index: 0;
-    opacity: 0.2;
-}
-
 main{
     grid-area: main;
 }
 
 .about {
-    background-color: var(--powder-blue);
-    color:var(--rich-black-fogra-39);
+    background-color: var(--light-one);
+    color:var(--dark-one);
     padding: 0 40px 50px 40px;
     font-size: 1.1em;
 }
@@ -136,21 +145,21 @@ main{
 }
 
 .more-info button{
-    box-shadow:inset 0px 1px 0px 0px var(--shiny-shamrock);
-	background:linear-gradient(to bottom, var(--fern-green) 5%, var(--brunswick-green) 100%);
+    box-shadow:inset 0px 1px 0px 0px var(--dark-two);
+	background:linear-gradient(to bottom, var(--middle) 5%, var(--dark-two) 100%);
 	border-radius:6px;
-	border:2px solid var(--shiny-shamrock);
+	border:2px solid var(--dark-two);
 	display:inline-block;
 	cursor:pointer;
 	font-size:1.3em;
 	font-weight:bold;
 	padding:6px 24px;
 	text-decoration:none;
-	text-shadow:0px 1px 0px var(--fern-green);
+	text-shadow:0px 1px 0px var(--middle);
     margin:1rem;
 }
 .more-info button:hover {
-    background:linear-gradient(to bottom, var(--brunswick-green) 5%, var(--fern-green) 100%);
+    background:linear-gradient(to bottom, var(--dark-two) 5%, var(--middle) 100%);
 }
 .more-info button:active {
     position:relative;
@@ -164,11 +173,13 @@ main{
 }
 
 .contact {
-  background-color: var(--medium-turquoise);
-   padding: 20px;
+  background-color: var(--middle);
+  padding: 20px;
 }
 
-.contact h2{
+.contact p{
+    color: var(--dark-one);
+    font-weight: 600;
     margin-top: 0px;
     text-align: center;
     font-size: 1.8em;
@@ -176,16 +187,14 @@ main{
 
 .contact ul {
     justify-content: space-evenly;
-    width: 50%;
+    max-width: 500px;
     margin: auto;
     align-items: center;
+    padding-bottom: 20px;
 }
-
-.contact-twitter{
-    height: 50px;
-}
-.contact-email {
-     height: 36.4px;
+.contact i{
+    color:var(--dark-one);
+    font-size: 3rem;
 }
 
 .section-title {
@@ -200,16 +209,16 @@ main{
 
 footer {
     text-align: center;
-    background-color: var(--shiny-shamrock);
-    color: var(--rich-black-fogra-39);
-    padding: 15px;
+    background-color: var(--dark-one);
+    color: var(--light-one);
     grid-area: footer;
+    border-top: 3px solid var(--dark-two);
 }
 
 
 /*Fiction*/
 .fiction{
-  background-color: var(--powder-blue);
+  background-color: var(--light-one);
 }
 
 
@@ -217,17 +226,17 @@ footer {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 100%;
+  margin: 0 auto;
+  max-width: 1000px;  
 }
 
 
 .card {
   padding: 1rem;
   position: relative;
-  background-color: var(--powder-blue);
+  background-color: var(--light-two);
+  border: 4px double var(--dark-two);
   margin: 1rem;
-  border: 4px double var(--rich-black-fogra-39);
-  width: 100%;
 } 
 
 .card-content {
@@ -263,7 +272,7 @@ footer {
     background-repeat: no-repeat;
 	background-position: left center;
     padding-left: 20px;
-    margin: 0 1rem;
+    margin: 0.5rem 1rem 0 1rem;
 }
 
 .syfy {
@@ -290,10 +299,13 @@ footer {
 /*Non fiction*/
 
 .non-fiction{
-    background-color: var(--powder-blue);
+    background-color: var(--light-one);
 }
 
-.non-fiction h4 {
+.non-fiction h2{
+    margin:1rem 0;
+}
+.non-fiction h3 {
     font-size: 1.3em;
 }
 .cards-grid {
@@ -307,8 +319,8 @@ footer {
 }
 .card-grid {
   padding: 1rem;
-  border: 4px double var(--rich-black-fogra-39);
-  background-color: var(--powder-blue);
+  border: 4px double var(--dark-two);
+  background-color: var(--light-two);
 }
 
 
@@ -344,15 +356,21 @@ footer {
 }
 
 @media (min-width: 750px) {
+    .home {
+        font-size: 1.7;
+    }
+
     .cards-grid {
         grid-template-columns: repeat(2, 1fr);
     }
+
+    .contact i {
+        font-size: 2rem;
+    }
+
 }
 
 @media (min-width: 1400px) {
-    .hero {
-        height: 50vh;
-    }
 
     nav {
         font-size: 1.4em;
@@ -370,14 +388,6 @@ footer {
         width: 80%;
         margin-left: auto;
         margin-right: auto;
-    }
-
-    .contact-twitter {
-        height: 80px;
-    }
-
-    .contact-email {
-        height: 50px;
     }
 
 }
